fix(app-header): adjust background to align with primary color

--- a/components/src/app-header/app-header.component.scss
+++ b/components/src/app-header/app-header.component.scss
@@ -3,11 +3,19 @@
   box-sizing: border-box;
   width: 100%;
 }
-.menu-button {
+
+mat-toolbar {
+  background-color: var(--mat-sys-primary);
+  color: var(--mat-sys-on-primary);
+}
+
+.mat-mdc-button.menu-button {
+  color: var(--mat-sys-on-primary);
   margin-right: 4px;
   min-width: unset;
   border-radius: 0;
   height: 100%;
+
   mat-icon {
     font-size: 26px;
     height: 26px;
@@ -15,24 +23,29 @@
     margin: 0;
   }
 }
+
 .ngbiz-user-pin {
   border-radius: 16px;
-  & > * {
+
+  &>* {
     vertical-align: middle;
   }
 }
-.ngbiz-username{
+
+.ngbiz-username {
   font-size: 12px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
   max-width: 100%;
 }
+
 .photo-url {
   width: 24px;
   height: 24px;
   border-radius: 50%;
 }
+
 mat-toolbar {
   height: 100%;
   font-size: 13px;
@@ -45,13 +58,15 @@ mat-toolbar {
   text-transform: uppercase;
   text-align: left;
   overflow: hidden;
+
   .names-wrapper {
     display: flex;
     flex-direction: column;
     justify-content: center;
     margin-left: 4px;
     overflow: hidden;
-    > div {
+
+    >div {
       line-height: 1.2;
       font-size: 10px;
       text-overflow: ellipsis;
@@ -59,19 +74,23 @@ mat-toolbar {
     }
   }
 }
+
 .exit-button {
   font-size: 12px;
+
   mat-icon {
     font-size: 19px;
     height: 20px;
     width: 20px;
   }
 }
+
 .separator {
   border-left: 1px solid #fff;
   width: 1px;
   height: 22px;
 }
+
 .abc {
   background-color: red;
 }
